syntax = "proto3";

package proto;

service PublisherAC {
	rpc Publish(stream PubRequest) returns (ErrorMsg) {}
}

service BrokerAC {
	rpc Forward(stream FwdRequest) returns (ErrorMsg) {}
}

message PubRequest {
	int64 PublisherID = 1;
	int64 PublicationID = 2;
	bytes Publication = 3;
}

message FwdRequest {
	int64 PublisherID = 1;
	int64 PublicationID = 2;
	int64 BrokerID = 3;
	bytes Publication = 4;
}

message ErrorMsg{
	string Message = 1;
}